# topic-monitor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  common.cpp  common.hpp  log.cpp  log.hpp  main.cpp  monitoringThread.cpp  monitoringThread.hpp  solClientThread.cpp  solClientThread.hpp  subscriptionTable.lua  threadSafeQueue.hpp  timeoutWheel.cpp  timeoutWheel.hpp  utils.cpp  utils.hpp
monitoring-scripts/: emails.lua  temperature.lua
